# ocr-flaves

./: .dockerignore  .gitignore  Dockerfile.extract  LICENSE  README.md  docker-compose.yml  document_utils.py  experiments.ipynb  ocr_extract_mlx_flavor.py  package-list.txt  plan.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
scaffold/: invoice_1.json  main.py  preprocessor.py
stagging/tmp_src/: Dockerfile.llava  docker-compose.yml  extract.py
staging/: Dockerfile.llava  __init__.py  config.py  docker-compose.yml  extract.py
staging/core/: monitor.py  performance.py  reliability.py  reliablity.py  scoring.py  security.py
staging/processors/: document_processor.bak  document_processor.py
tests/: conftest.py  test_document_format.py  test_extraction.py  test_utils.py
tmp/tmp_src/: .gitignore  Dockerfile.bakllava  document_processor.py  extract.py  server.py  startup-bakllava.sh  startup-llava.sh
